test/fixtures/config/theming/error/gulpfileNotFound/.gulp.js
module.exports = {
  log: {
    msgs: {
      error: {
        gulpfileNotFound: '{TIMESTAMP}NO GULPFILE',
      },
    },
  },
};
